--- a/0x02-tailwind-css/input.css
+++ b/0x02-tailwind-css/input.css
@@ -3,5 +3,7 @@
 @tailwind utilities;
 
 @media (max-width: 768px) {
-  main { grid-template-columns: 1fr; }
+  main {
+    grid-template-columns: 1fr;
+  }
 }
