--- a/0x02-tailwind-css/src/output.css
+++ b/0x02-tailwind-css/src/output.css
@@ -1,1 +1,3 @@
-npx tailwindcss -i ./src/input.css -o ./src/output.css --watch
+git add .
+git commit -m "Add input.css, output.css, and config"
+git push origin main
